# bigvision-palivla

./: .gitignore  .gitmodules  01_inference_pretrained.ipynb  01_value_action_inference.ipynb  02_value_inference.ipynb  README.md  aloha_config.py  bridge_config.py  eval.py  eval_palivla.py  inference.py  inference.sh  inference_action_value.sh  inference_test.py  inference_value.py  inference_value.sh  launch.sh  pod_config.py  pod_config_fuse.py  pyproject.toml  run.bash  run_max.bash  setup.bash  setup_pod.sh  setup_pod_max.sh  setup_v4.sh  ssh_pod.sh  test.py  test_eval.py  test_podv5.py  test_podv5_cmu.py  train_paligemma_bridge.py  vm_run.bash
big_vision/: train.py
big_vision/models/: vit.py
big_vision/models/ppp/: gemma.py
big_vision/models/proj/paligemma/: gemma_bv.py  paligemma.py
big_vision/trainers/proj/cappa/: generative.py
big_vision/trainers/proj/distill/: distill.py
big_vision/trainers/proj/flexi/: distill.py  train.py
big_vision/trainers/proj/givt/: generative.py  vae.py
big_vision/trainers/proj/gsam/: train.py
big_vision/trainers/proj/image_text/: _deprecated_contrastive.py  siglip.py
big_vision/trainers/proj/paligemma/: predict_fns.py  train.py
big_vision/trainers/proj/uvim/: train.py  vqvae.py
configs/: aloha_config.py  aloha_tokenizer_config.py  bridge_config.py  bridge_critic_config.py  cot_bridge_config.py  epic_bridge_config.py  epic_config.py  oxe_config.py  smoke_test.py  smoke_test_critic.py
data_generation/: README.md  epic_cot.py  generate_everything_else.py  generate_object_names.py  post_hoc.py  tokenize_coords.py
data_generation/brc_scripts/: multiple_jobs.sh  one_job_actions.sh  posthoc.sh
data_generation/helpers/: detr.py  detr_format.json  molmo.py  molmo_coords.py  molmo_objs.py  sam.py
data_generation/visualization/: posthoc_viz.ipynb  viz_helper.py
notebooks/: ComputeHomography.ipynb  inference.ipynb
palivla/: cot_utils.py  dataset.py  eval_step.py  inference.ipynb  inference.py  learned_tokenizer.py  load_model.py  modality_embedder.py  model.py  palivla_types.py  predict_fns.py  sentencepiece_model_pb2.py  spec.py  tactile_encoder_pooled.py  tactile_tokenizer.py  tokenizer.py  train.py  train_debug.py  train_fuse.py  train_new.py  train_state.py  train_step.py  train_tokenizer.py  train_types.py  types.py  utils.py
palivla/configs/: aloha_config.py  aloha_tokenizer_config.py  bridge_config.py  debug_config.py  fuse_config.py  gnm_config.py  oxe_config.py  smoke_test.py
scripts/: cache_actions.py  simpler_eval.py  train.py  train_critic.py
src/big_vision/models/ppp/: gemma.py
src/big_vision/models/proj/paligemma/: gemma_bv.py
src/palivla/: base_config.py  cot_parser.py  cot_utils.py  dataset.py  eval_step.py  learned_tokenizer.py  load_fns.py  load_model.py  model.py  model_components.py  optimizer.py  palivla_types.py  predict_fns.py  sharding.py  spec.py  train.py  train_state.py  train_step.py  train_tokenizer.py  typing.py  utils.py
src/palivla/components/: __init__.py  action_tokenizer.py  cot_sequence_builder.py  model.py  sequence_builder.py  train_state.py
src/palivla/configs/: bridge_config.py  smoke_test.py
src/palivla/critic/: model_components.py  train_state.py  train_step.py  visualize_critic.py  vla_critic.py
src/palivla/visualizations/: __init__.py  chain_of_thought.py  sanity_print.py
tests/palivla/: test_cot_parser.py  test_sequence_builders.py
